--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.frostbun.unit.entities",
   "displayName": "UniT Entities",
   "description": "Entity Manager for Unity",
-  "version": "f",
+  "version": "1.0.25",
   "unity": "2022.3",
   "license": "MIT",
   "author": {
@@ -11,9 +11,9 @@
     "url": "https://github.com/frostbun"
   },
   "dependencies": {
-    "com.frostbun.unit.extensions": "1.0.52",
+    "com.frostbun.unit.extensions": "1.0.53",
     "com.frostbun.unit.logging": "1.0.7",
-    "com.frostbun.unit.pooling": "1.0.12",
+    "com.frostbun.unit.pooling": "1.0.13",
     "com.frostbun.unit.di": "1.0.12"
   }
 }
